--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-12-01  Klaus Weide  <kweide@uchicago.edu>
+
+	* source/mpi_morton_bnd.F90: fix PM_OPTIMIZE_MORTONBND_FETCHLIST
+	code, wich references nxb,nyb,nzb, by using ASSOCIATE for PDG 1
+	(for now).
+
 2022-11-30  Klaus Weide  <kweide@uchicago.edu>
 
 	* flash_avoid_orrery/amr_morton_process.F90,headers/paramesh_mpi_interfaces.F90,source/amr_1blk_guardcell_reset.F90,source/amr_initialize.F90,
