--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-01-18  Klaus Weide  <kweide@uchicago.edu>
+
+	* source/gr_pmBlockGetter.F90: renumber S_* states.
+	(pmBlockGet_) set push_data_out_very_quickly to FALSE.
+
 2022-06-14  Klaus Weide  <kweide@compute-240-14.cels.anl.gov>
 
 	* source/mpi_set_message_sizes.F90 (mpi_set_message_sizes): allow
