--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-04-05  Austin Harris  <jaharris87>
+
+	* source/amr_restrict_unk_fun.F90: call amr_restrict_unk_dg for
+	a set of variables (when requested), instead of per-variable.
+
 2023-03-17  Klaus Weide  <kweide@uchicago.edu>
 
 	* source/mpi_amr_1blk_restrict.F90,source/mpi_amr_restrict_fulltree.F90: special handling for interp_mask_unk_res 40.
