--- a/utilities/incomp/README
+++ b/utilities/incomp/README
@@ -2,6 +2,6 @@ Auxiliary files moved inside the PM_package level, primarily
 for use by Incompressible-Navier-Stokes solver in Flash-X.
 Should work together with a higher-level "Incomp" directory.
 Source files here are used in place of files with
-the same name a higher directory levels if and
+the same name at higher directory levels if and
 only if this source directory is REQUIRED
-or REQEUSTED.
+or REQUESTED.
