--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2024-04-03  Klaus Weide  <kweide@uchicago.edu>
+
+	* source/mpi_morton_bnd_restrict.F90: corrected one of the conditions that decide from which children
+	data is requested.
+	* source/gr_amr1blkRestrict.F90: corrected
+	the special handling for interp_mask_unk_res 40.
+
 2024-04-01  Klaus Weide  <kweide@uchicago.edu>
 
 	* source/mpi_morton_bnd_restrict.F90: on merging various lines of
@@ -56,7 +63,7 @@
 
 	* source/mpi_amr_1blk_restrict.F90,source/mpi_amr_restrict_fulltree.F90: pass ioff,joff,koff to amr_restrict_unk_fun.
 	* headers/paramesh_interfaces.F90(amr_restrict_unk_fun,amr_restrict_unk_dg):
-	add ioff,joff,koff arguements to interfaces.
+	add ioff,joff,koff arguments to interfaces.
 	* source/amr_restrict_unk_fun.F90,source/amr_restrict_unk_dg.F90:
 	add ioff,joff,koff arguments to argument lists; do not do
 	anything with them here except passing on.
