--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2024-12-14  Klaus Weide  <kweide@uchicago.edu>
+
+	* bittree/amr_build_bittree.F90,bittree/mpi_amr_redist_blk.F90: include "Flashx_mpi_implicitNone.fh".
+
 2024-12-11  Klaus Weide  <kweide@uchicago.edu>
 
 	* bittree/amr_exchange_work_bflags.F90: include "Flashx_mpi_implicitNone.fh".
